# hash-data

./: Cargo.toml  LICENSE  README.md  README.tpl  build.rs
data/: fixtures.toml  regexes.toml
src/: lib.rs  main.rs
